--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1>Attraction & Repulsion Forces</h1>
 <h4> By Aryaman Kumar </h4>
 <body>
-<p> Click on the buttons and position objects on to the screen.<br>
+<p> Position attractors and repellers onto the screen after activating their respective buttons. Drag partiicles acroos the canvas and hit go when ready<br>
   Forces are based on the Universal gravitational formula.<br>
 	What cool designs can you create?
 </p>
